[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=andrew_test/ --cov-report=term-missing"
asyncio_mode = "strict"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "andrew_test/__init__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-asyncio",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff --fix .",
  "mypy andrew_test/",
]
lint-check = [
  "ruff format --check .",
  "ruff .",
  "mypy andrew_test/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "andrew_test"
authors = [
  { name = "andrew_test", email = "hey.at.py@gmail.com" }
]
description = "Testing cookiecutter"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.12"
dependencies = [
]

[project.urls]
Documentation = "https://dinbergare.github.io/andrew_test/"
Source = "https://github.com/dinbergare/andrew_test"
